# nix-pyo3

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  flake_test.nix  flake_vm.nix  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
crates/base/: Cargo.toml
crates/base/src/: lib.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/nix_integration_test/: Cargo.toml
crates/nix_integration_test/src/: lib.rs
crates/nix_integration_tests/: Cargo.toml
crates/nix_integration_tests/python/: test_kafka.py
crates/say-hello/: Cargo.toml
crates/say-hello/src/: main.rs
nix/: integration-tests.nix  rust.nix  scripts.nix
